--- a/scss/main.scss
+++ b/scss/main.scss
@@ -199,7 +199,7 @@ body {
 	}
 
 	.devider {
-		background-image: url("../img/fasaani.jpg");
+		background-image: url("../src/img/fasaani.JPG");
 		height: 10rem;
 		background-attachment: fixed;
 		background-size: cover;
