--- a/scss/main.scss
+++ b/scss/main.scss
@@ -6,6 +6,13 @@ body {
 	header {
 		display: flex;
 		flex-direction: column;
+		background: linear-gradient(
+			90deg,
+			rgba(237, 246, 249, 0.2553396358543417) 20%,
+			rgba(149, 152, 186, 1) 100%,
+			rgba(30, 1, 34, 1) 100%,
+			rgba(101, 68, 110, 1) 100%
+		);
 	}
 
 	.header-wrapper {
@@ -84,8 +91,7 @@ body {
 		margin-bottom: 2rem;
 	}
 
-	.main__section-four__content,
-	.main__section-ten__content {
+	.main__section-four__content {
 		display: flex;
 		flex-direction: column;
 		align-items: center;
@@ -94,12 +100,16 @@ body {
 		width: 100%;
 	}
 
-	.main__section-four__content {
-		height: 10rem;
+	.main__section-ten__content {
+		display: flex;
+		align-items: center;
+		height: 15rem;
+		background-color: $text-dark;
+		width: 100%;
 	}
 
-	.main__section-ten__content {
-		height: 15rem;
+	.main__section-four__content {
+		height: 10rem;
 	}
 
 	.main__section-one__content__title,
@@ -189,6 +199,7 @@ body {
 		border: 0.7px grey solid;
 		margin: 3rem;
 		opacity: $background-opacity;
+		box-shadow: 10px 10px 45px $text-dark;
 	}
 
 	footer {
@@ -214,23 +225,13 @@ body {
 		box-sizing: border-box;
 		color: rgba(0, 0, 0, 0.85);
 		cursor: pointer;
-		display: inline-flex;
-		font-family: system-ui, -apple-system, system-ui, "Helvetica Neue",
-			Helvetica, Arial, sans-serif;
+		font-family: $header-title;
 		font-size: 16px;
-		font-weight: 600;
 		justify-content: center;
 		line-height: 1.25;
 		margin-bottom: 1rem;
 		min-height: 3rem;
-		padding: calc(0.875rem - 1px) calc(1.5rem - 1px);
-		position: relative;
-		text-decoration: none;
 		transition: all 250ms;
-		user-select: none;
-		-webkit-user-select: none;
-		touch-action: manipulation;
-		vertical-align: baseline;
 	}
 
 	.button:hover,
@@ -266,6 +267,10 @@ body {
 		flex-direction: column;
 		justify-content: center;
 		align-items: center;
+	}
+
+	.link-icon:hover {
+		transform: translateY(-1px);
 	}
 }
 
